--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "node": ">=4"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "node-sass": "^4.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
